--- a/projects/validators-monster-course/src/app/app.component.html
+++ b/projects/validators-monster-course/src/app/app.component.html
@@ -26,3 +26,5 @@
 <app-validator001></app-validator001>
 <br />
 <app-old-validator001></app-old-validator001>
+<br>
+<app-old-validator002></app-old-validator002>
