fixed-handsontable.full.css

--- a/projects/validators-monster-course/src/app/app.component.html
+++ b/projects/validators-monster-course/src/app/app.component.html
@@ -28,3 +28,11 @@
 <app-old-validator001></app-old-validator001>
 <br>
 <app-old-validator002></app-old-validator002>
+<br>
+<hot-table
+  [colHeaders]="true"
+  [rowHeaders]="true"
+  [autoWrapRow]="true"
+  [autoWrapCol]="true"
+  licenseKey="non-commercial-and-evaluation">
+</hot-table>
