--- a/projects/validators-monster-course/src/styles.css
+++ b/projects/validators-monster-course/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
+@import 'handsontable/dist/handsontable.full.css';
+*/
+
+@import 'fixed-handsontable.full.css';
