--- a/projects/handsontable001/src/app/app.component.html
+++ b/projects/handsontable001/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-handson-prova001></app-handson-prova001>
+
+<!-- <app-handson-prova001></app-handson-prova001> -->
 <br><br>
 <app-certicate-grid></app-certicate-grid>
 <router-outlet />
